--- a/cordova/platforms/android/res/xml/config.xml
+++ b/cordova/platforms/android/res/xml/config.xml
@@ -21,4 +21,5 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
+    <icon src="res/app-icon.png" />
 </widget>
