--- a/cordova/platforms/android/res/xml/config.xml
+++ b/cordova/platforms/android/res/xml/config.xml
@@ -5,12 +5,25 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="SplashScreen">
+        <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
+        <param name="onload" value="true" />
+    </feature>
+    <splash density="land-hdpi" src="res/drawable-land-hdpi/screen.png" />
+    <splash density="land-ldpi" src="res/drawable-land-ldpi/screen.png" />
+    <splash density="land-mdpi" src="res/drawable-land-mdpi/screen.png" />
+    <splash density="land-xhdpi" src="res/drawable-land-xhdpi/screen.png" />
+    <splash density="port-hdpi" src="res/drawable-port-hdpi/screen.png" />
+    <splash density="port-ldpi" src="res/drawable-port-ldpi/screen.png" />
+    <splash density="port-mdpi" src="res/drawable-port-mdpi/screen.png" />
+    <splash density="port-xhdpi" src="res/drawable-port-xhdpi/screen.png" />
+    <splash density="port-xxhdpi" src="res/drawable-port-xxhdpi/screen.png" />
     <allow-intent href="market:*" />
     <name>IP List Manager</name>
     <description>
         IP List Manager
     </description>
-    <author email="bgauvey@cgmail.com" href="http://billgauvey.com">
+    <author email="bgauvey@gmail.com" href="http://billgauvey.com">
         Bill Gauvey
     </author>
     <content src="index.html" />
@@ -22,4 +35,6 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <icon src="res/app-icon.png" />
+    <preference name="SplashScreen" value="screen" />
+    <preference name="SplashScreenDelay" value="4000" />
 </widget>
