--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -34,7 +34,16 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1;
+    z-index: 100;
+}
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 48%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 100;
 }
 
 md-input-container.search-box.md-input-theme {
