--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -38,12 +38,11 @@ body {
 }
 .loading-overlay {
     position: fixed;
-    top: 0;
-    left: 48%;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
     background-color: rgba(0, 0, 0, 0);
     z-index: 100;
+    transform: translate(-50%, -50%);
 }
 
 md-input-container.search-box.md-input-theme {
